fixed text overflow on about-btn and margin between q's and a's

--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,6 @@ h2.subheader {
 
 .aboutP {
     font-size: 16px;
-    padding-top: 30px;
 }
 /*-- /class-styles --*/
 
@@ -187,10 +186,12 @@ li a:hover {
     border-color: none;
     border: transparent;
     padding: 0;
-    margin: 0;
+    margin-bottom: 30px !important;
     color: whitesmoke;
     font-weight: 700;
     line-height: 2.5;
+    white-space:normal !important;
+    word-wrap:break-word;
 }
 
 .about-btn:hover  {
